// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCell matches snapshot (array of numbers) 1`] = `
<TableCell
  dataKey="arrayOfNumbers"
  dataRow={
    {
      "arrayOfNumbers": [
        42,
        9001,
      ],
    }
  }
  host=""
  image={null}
  linkTo={null}
  width={1}
>
  <ForwardRef(TableCell)
    flexGrow={1}
  >
    <ForwardRef(Pane)
      alignItems="center"
      boxSizing="border-box"
      className="css-saeo60"
      display="flex"
      flex={1}
      flexGrow={1}
      flexShrink={0}
      onKeyDown={[Function]}
      overflow="hidden"
      paddingX={12}
    >
      <Box
        alignItems="center"
        boxSizing="border-box"
        className="css-saeo60 css-nil"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        is="div"
        onKeyDown={[Function]}
        overflow="hidden"
        paddingX={12}
      >
        <div
          className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_hidden ub-ovflw-y_hidden ub-flx-grow_1"
          onKeyDown={[Function]}
        >
          <ForwardRef(Text)
            size={400}
          >
            <Box
              boxSizing="border-box"
              className=""
              color="#425A70"
              fontFamily=""SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol""
              fontSize="14px"
              fontWeight={400}
              is="span"
              letterSpacing="-0.05px"
              lineHeight="20px"
            >
              <span
                className="ub-color_425A70 ub-fnt-fam_b77syt ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-box-szg_border-box"
              >
                <ul>
                  <li
                    key="0"
                  >
                    42
                  </li>
                  <li
                    key="1"
                  >
                    9001
                  </li>
                </ul>
              </span>
            </Box>
          </ForwardRef(Text)>
        </div>
      </Box>
    </ForwardRef(Pane)>
  </ForwardRef(TableCell)>
</TableCell>
`;

exports[`TableCell matches snapshot (array of strings and numbers) 1`] = `
<TableCell
  dataKey="arrayOfStringsAndNumbers"
  dataRow={
    {
      "arrayOfStringsAndNumbers": [
        "Answer to the ultimate question of life, the Universe, and everything",
        42,
        "Vegeta, what does the scouter say about his power level?",
        9001,
      ],
    }
  }
  host=""
  image={null}
  linkTo={null}
  width={1}
>
  <ForwardRef(TableCell)
    flexGrow={1}
  >
    <ForwardRef(Pane)
      alignItems="center"
      boxSizing="border-box"
      className="css-saeo60"
      display="flex"
      flex={1}
      flexGrow={1}
      flexShrink={0}
      onKeyDown={[Function]}
      overflow="hidden"
      paddingX={12}
    >
      <Box
        alignItems="center"
        boxSizing="border-box"
        className="css-saeo60 css-nil"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        is="div"
        onKeyDown={[Function]}
        overflow="hidden"
        paddingX={12}
      >
        <div
          className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_hidden ub-ovflw-y_hidden ub-flx-grow_1"
          onKeyDown={[Function]}
        >
          <ForwardRef(Text)
            size={400}
          >
            <Box
              boxSizing="border-box"
              className=""
              color="#425A70"
              fontFamily=""SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol""
              fontSize="14px"
              fontWeight={400}
              is="span"
              letterSpacing="-0.05px"
              lineHeight="20px"
            >
              <span
                className="ub-color_425A70 ub-fnt-fam_b77syt ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-box-szg_border-box"
              >
                <ul>
                  <li
                    key="0"
                  >
                    Answer to the ultimate question of life, the Universe, and everything
                  </li>
                  <li
                    key="1"
                  >
                    42
                  </li>
                  <li
                    key="2"
                  >
                    Vegeta, what does the scouter say about his power level?
                  </li>
                  <li
                    key="3"
                  >
                    9001
                  </li>
                </ul>
              </span>
            </Box>
          </ForwardRef(Text)>
        </div>
      </Box>
    </ForwardRef(Pane)>
  </ForwardRef(TableCell)>
</TableCell>
`;

exports[`TableCell matches snapshot (array of strings) 1`] = `
<TableCell
  dataKey="arrayOfStrings"
  dataRow={
    {
      "arrayOfStrings": [
        "I mean, why would a Pop-Tart want to live inside a toaster, Rick?",
        "I mean, that would be like the scariest place for them to live.",
        "You know what I mean?",
      ],
    }
  }
  host=""
  image={null}
  linkTo={null}
  width={1}
>
  <ForwardRef(TableCell)
    flexGrow={1}
  >
    <ForwardRef(Pane)
      alignItems="center"
      boxSizing="border-box"
      className="css-saeo60"
      display="flex"
      flex={1}
      flexGrow={1}
      flexShrink={0}
      onKeyDown={[Function]}
      overflow="hidden"
      paddingX={12}
    >
      <Box
        alignItems="center"
        boxSizing="border-box"
        className="css-saeo60 css-nil"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        is="div"
        onKeyDown={[Function]}
        overflow="hidden"
        paddingX={12}
      >
        <div
          className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_hidden ub-ovflw-y_hidden ub-flx-grow_1"
          onKeyDown={[Function]}
        >
          <ForwardRef(Text)
            size={400}
          >
            <Box
              boxSizing="border-box"
              className=""
              color="#425A70"
              fontFamily=""SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol""
              fontSize="14px"
              fontWeight={400}
              is="span"
              letterSpacing="-0.05px"
              lineHeight="20px"
            >
              <span
                className="ub-color_425A70 ub-fnt-fam_b77syt ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-box-szg_border-box"
              >
                <ul>
                  <li
                    key="0"
                  >
                    I mean, why would a Pop-Tart want to live inside a toaster, Rick?
                  </li>
                  <li
                    key="1"
                  >
                    I mean, that would be like the scariest place for them to live.
                  </li>
                  <li
                    key="2"
                  >
                    You know what I mean?
                  </li>
                </ul>
              </span>
            </Box>
          </ForwardRef(Text)>
        </div>
      </Box>
    </ForwardRef(Pane)>
  </ForwardRef(TableCell)>
</TableCell>
`;

exports[`TableCell matches snapshot (image link) 1`] = `
<TableCell
  dataKey="string"
  dataRow={
    {
      "string": "foobar",
    }
  }
  host=""
  image={
    {
      "foobar": {
        "alt": "Ringtone Timeline",
        "src": "https://imgs.xkcd.com/comics/ringtone_timeline_2x.png",
        "title": "No one likes my novelty ringtone, an audio recording of a phone on vibrate sitting on a hard surface.",
      },
    }
  }
  linkTo={null}
  toLink={[Function]}
  width={1}
>
  <ForwardRef(TableCell)
    flexGrow={1}
  >
    <ForwardRef(Pane)
      alignItems="center"
      boxSizing="border-box"
      className="css-saeo60"
      display="flex"
      flex={1}
      flexGrow={1}
      flexShrink={0}
      onKeyDown={[Function]}
      overflow="hidden"
      paddingX={12}
    >
      <Box
        alignItems="center"
        boxSizing="border-box"
        className="css-saeo60 css-nil"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        is="div"
        onKeyDown={[Function]}
        overflow="hidden"
        paddingX={12}
      >
        <div
          className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_hidden ub-ovflw-y_hidden ub-flx-grow_1"
          onKeyDown={[Function]}
        >
          <ForwardRef(Text)
            size={400}
          >
            <Box
              boxSizing="border-box"
              className=""
              color="#425A70"
              fontFamily=""SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol""
              fontSize="14px"
              fontWeight={400}
              is="span"
              letterSpacing="-0.05px"
              lineHeight="20px"
            >
              <span
                className="ub-color_425A70 ub-fnt-fam_b77syt ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-box-szg_border-box"
              >
                <img
                  alt="Ringtone Timeline"
                  src="https://imgs.xkcd.com/comics/ringtone_timeline_2x.png"
                  title="No one likes my novelty ringtone, an audio recording of a phone on vibrate sitting on a hard surface."
                />
              </span>
            </Box>
          </ForwardRef(Text)>
        </div>
      </Box>
    </ForwardRef(Pane)>
  </ForwardRef(TableCell)>
</TableCell>
`;

exports[`TableCell matches snapshot (image) 1`] = `
<TableCell
  dataKey="string"
  dataRow={
    {
      "string": "foobar",
    }
  }
  host=""
  image={
    {
      "foobar": {
        "alt": "Ringtone Timeline",
        "src": "https://imgs.xkcd.com/comics/ringtone_timeline_2x.png",
        "title": "No one likes my novelty ringtone, an audio recording of a phone on vibrate sitting on a hard surface.",
      },
    }
  }
  linkTo={null}
  width={1}
>
  <ForwardRef(TableCell)
    flexGrow={1}
  >
    <ForwardRef(Pane)
      alignItems="center"
      boxSizing="border-box"
      className="css-saeo60"
      display="flex"
      flex={1}
      flexGrow={1}
      flexShrink={0}
      onKeyDown={[Function]}
      overflow="hidden"
      paddingX={12}
    >
      <Box
        alignItems="center"
        boxSizing="border-box"
        className="css-saeo60 css-nil"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        is="div"
        onKeyDown={[Function]}
        overflow="hidden"
        paddingX={12}
      >
        <div
          className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_hidden ub-ovflw-y_hidden ub-flx-grow_1"
          onKeyDown={[Function]}
        >
          <ForwardRef(Text)
            size={400}
          >
            <Box
              boxSizing="border-box"
              className=""
              color="#425A70"
              fontFamily=""SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol""
              fontSize="14px"
              fontWeight={400}
              is="span"
              letterSpacing="-0.05px"
              lineHeight="20px"
            >
              <span
                className="ub-color_425A70 ub-fnt-fam_b77syt ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-box-szg_border-box"
              >
                <img
                  alt="Ringtone Timeline"
                  src="https://imgs.xkcd.com/comics/ringtone_timeline_2x.png"
                  title="No one likes my novelty ringtone, an audio recording of a phone on vibrate sitting on a hard surface."
                />
              </span>
            </Box>
          </ForwardRef(Text)>
        </div>
      </Box>
    </ForwardRef(Pane)>
  </ForwardRef(TableCell)>
</TableCell>
`;

exports[`TableCell matches snapshot (missing image) 1`] = `
<TableCell
  dataKey="string"
  dataRow={
    {
      "string": "foobar",
    }
  }
  host=""
  image={{}}
  linkTo={null}
  width={1}
>
  <ForwardRef(TableCell)
    flexGrow={1}
  >
    <ForwardRef(Pane)
      alignItems="center"
      boxSizing="border-box"
      className="css-saeo60"
      display="flex"
      flex={1}
      flexGrow={1}
      flexShrink={0}
      onKeyDown={[Function]}
      overflow="hidden"
      paddingX={12}
    >
      <Box
        alignItems="center"
        boxSizing="border-box"
        className="css-saeo60 css-nil"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        is="div"
        onKeyDown={[Function]}
        overflow="hidden"
        paddingX={12}
      >
        <div
          className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_hidden ub-ovflw-y_hidden ub-flx-grow_1"
          onKeyDown={[Function]}
        >
          <ForwardRef(Text)
            size={400}
          >
            <Box
              boxSizing="border-box"
              className=""
              color="#425A70"
              fontFamily=""SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol""
              fontSize="14px"
              fontWeight={400}
              is="span"
              letterSpacing="-0.05px"
              lineHeight="20px"
            >
              <span
                className="ub-color_425A70 ub-fnt-fam_b77syt ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-box-szg_border-box"
              >
                ❔
              </span>
            </Box>
          </ForwardRef(Text)>
        </div>
      </Box>
    </ForwardRef(Pane)>
  </ForwardRef(TableCell)>
</TableCell>
`;

exports[`TableCell matches snapshot (number) 1`] = `
<TableCell
  dataKey="number"
  dataRow={
    {
      "number": 9001,
    }
  }
  host=""
  image={null}
  linkTo={null}
  width={1}
>
  <ForwardRef(TableCell)
    flexGrow={1}
  >
    <ForwardRef(Pane)
      alignItems="center"
      boxSizing="border-box"
      className="css-saeo60"
      display="flex"
      flex={1}
      flexGrow={1}
      flexShrink={0}
      onKeyDown={[Function]}
      overflow="hidden"
      paddingX={12}
    >
      <Box
        alignItems="center"
        boxSizing="border-box"
        className="css-saeo60 css-nil"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        is="div"
        onKeyDown={[Function]}
        overflow="hidden"
        paddingX={12}
      >
        <div
          className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_hidden ub-ovflw-y_hidden ub-flx-grow_1"
          onKeyDown={[Function]}
        >
          <ForwardRef(Text)
            size={400}
          >
            <Box
              boxSizing="border-box"
              className=""
              color="#425A70"
              fontFamily=""SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol""
              fontSize="14px"
              fontWeight={400}
              is="span"
              letterSpacing="-0.05px"
              lineHeight="20px"
            >
              <span
                className="ub-color_425A70 ub-fnt-fam_b77syt ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-box-szg_border-box"
              >
                9001
              </span>
            </Box>
          </ForwardRef(Text)>
        </div>
      </Box>
    </ForwardRef(Pane)>
  </ForwardRef(TableCell)>
</TableCell>
`;

exports[`TableCell matches snapshot (sring) 1`] = `
<TableCell
  dataKey="string"
  dataRow={
    {
      "string": "foobar",
    }
  }
  host=""
  image={null}
  linkTo={null}
  width={1}
>
  <ForwardRef(TableCell)
    flexGrow={1}
  >
    <ForwardRef(Pane)
      alignItems="center"
      boxSizing="border-box"
      className="css-saeo60"
      display="flex"
      flex={1}
      flexGrow={1}
      flexShrink={0}
      onKeyDown={[Function]}
      overflow="hidden"
      paddingX={12}
    >
      <Box
        alignItems="center"
        boxSizing="border-box"
        className="css-saeo60 css-nil"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        is="div"
        onKeyDown={[Function]}
        overflow="hidden"
        paddingX={12}
      >
        <div
          className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_hidden ub-ovflw-y_hidden ub-flx-grow_1"
          onKeyDown={[Function]}
        >
          <ForwardRef(Text)
            size={400}
          >
            <Box
              boxSizing="border-box"
              className=""
              color="#425A70"
              fontFamily=""SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol""
              fontSize="14px"
              fontWeight={400}
              is="span"
              letterSpacing="-0.05px"
              lineHeight="20px"
            >
              <span
                className="ub-color_425A70 ub-fnt-fam_b77syt ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-box-szg_border-box"
              >
                foobar
              </span>
            </Box>
          </ForwardRef(Text)>
        </div>
      </Box>
    </ForwardRef(Pane)>
  </ForwardRef(TableCell)>
</TableCell>
`;

exports[`TableCell matches snapshot (text link) 1`] = `
<TableCell
  dataKey="string"
  dataRow={
    {
      "string": "foobar",
    }
  }
  host=""
  image={null}
  linkTo={null}
  toLink={[Function]}
  width={1}
>
  <ForwardRef(TableCell)
    flexGrow={1}
  >
    <ForwardRef(Pane)
      alignItems="center"
      boxSizing="border-box"
      className="css-saeo60"
      display="flex"
      flex={1}
      flexGrow={1}
      flexShrink={0}
      onKeyDown={[Function]}
      overflow="hidden"
      paddingX={12}
    >
      <Box
        alignItems="center"
        boxSizing="border-box"
        className="css-saeo60 css-nil"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        is="div"
        onKeyDown={[Function]}
        overflow="hidden"
        paddingX={12}
      >
        <div
          className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_hidden ub-ovflw-y_hidden ub-flx-grow_1"
          onKeyDown={[Function]}
        >
          <ForwardRef(Text)
            size={400}
          >
            <Box
              boxSizing="border-box"
              className=""
              color="#425A70"
              fontFamily=""SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol""
              fontSize="14px"
              fontWeight={400}
              is="span"
              letterSpacing="-0.05px"
              lineHeight="20px"
            >
              <span
                className="ub-color_425A70 ub-fnt-fam_b77syt ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-box-szg_border-box"
              >
                foobar
              </span>
            </Box>
          </ForwardRef(Text)>
        </div>
      </Box>
    </ForwardRef(Pane)>
  </ForwardRef(TableCell)>
</TableCell>
`;
